# nesso

./: .env.example  .fallowrc.jsonc  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  eslint.config.js  index.html  mutation-areas.mjs  opencode.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.base.mjs  stryker.formats.mjs  stryker.mentor.mjs  stryker.store.mjs  stryker.types.mjs  stryker.workspace.mjs  vercel.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.json
.cursor/: hooks.json  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.hooks/: block-pnpm.sh  docs-mcp-reminder.sh  lib.sh  session-start.sh
.rules/: changelog.md  compatibility.md  components.md  conventions.md  docs.md  graph-model.md  harness.md  maintenance.md  mentor.md  pull-requests.md  static-analysis.md  store.md  testing.md  theme.md
docs/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
e2e/: edge-encoding.spec.ts  graph-editing.spec.ts  graph-management.spec.ts  helpers.ts  inline-edit.spec.ts  persistence.spec.ts  review-reminder.spec.ts  selection-history.spec.ts  settings.spec.ts  tsconfig.json
e2e-native/: Dockerfile  disk-persistence.e2e.ts  external-sync.e2e.ts  file-watch.e2e.ts  helpers.ts  relaunch-persistence.e2e.ts  run-local.sh  tsconfig.json  wdio.conf.ts
fallow-baselines/: dupes.json  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+363 files in other folders)
