[package]
name = "nesso"
version = "0.1.0-alpha.4"
description = "Nesso — AI-powered knowledge graph (Tauri shell)"
authors = ["Nesso contributors"]
license = "MIT"
repository = "https://github.com/cedoor/nesso"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nesso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
