[package]
name = "nesso"
version = "0.1.0-alpha.32"
description = "Nesso — an app for building typed knowledge graphs for active learning (Tauri shell)"
authors = ["Nesso contributors"]
license = "MIT"
repository = "https://github.com/nesso-how/nesso"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nesso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# Auto-updates are desktop-only (the updater replaces the installed bundle in place).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
